# Health-Code-Studio

healthcode-studio/: LICENSE  README.md  SPEC.md  package.json  tsconfig.base.json  turbo.json
healthcode-studio/apps/api/: Dockerfile  main.py  package.json  requirements.txt
healthcode-studio/apps/desktop/: package.json
healthcode-studio/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
healthcode-studio/apps/desktop/src-tauri/capabilities/: main.json
healthcode-studio/apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
healthcode-studio/apps/web/: next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
healthcode-studio/apps/web/app/: globals.css  layout.tsx  page.tsx
healthcode-studio/apps/web/components/: providers.tsx
healthcode-studio/apps/web/components/ui/: button.tsx  dialog.tsx  index.ts  input.tsx  toast.tsx  toaster.tsx
healthcode-studio/apps/web/lib/: db.ts  utils.ts
healthcode-studio/apps/web/public/: manifest.json
healthcode-studio/apps/web/stores/: app-store.ts
healthcode-studio/apps/web/tests/e2e/: home.spec.ts
healthcode-studio/docker/: README.md  docker-compose.yml
