[package]
name = "healthcode-studio"
version = "1.0.0"
description = "AI-powered health & wellness app generator - Tauri Desktop App"
authors = ["HealthCode Studio Team"]
license = "MIT"
repository = "https://github.com/healthcode-studio/healthcode-studio"
edition = "2021"

[lib]
name = "healthcode_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["devtools"] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-os = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
